# edcraft-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 20260119_add_root_folders_and_constraints.py  20260119_make_folder_id_required.py  272290b41af4_copy_on_link_question_templates.py  2995b8d71450_defer_order_checks_and_add_enum_for_.py  2e9d66c17dc1_add_question_template_bank.py  39176a2ce4db_make_email_unique_only_for_non_deleted_.py  586b9870870f_add_collab_to_other_resources.py  5877e14505f2_add_authentication_models.py  5bd365832755_add_question_text_template.py  677216462b77_add_jobs_table.py  79dc1a47e5c6_refactor_template_config_to_structured_.py  7d4be8c360e2_create_initial_database_schema.py  8a6af857e1df_add_resource_collaborators.py  8bea5bfceb27_add_assessment_visibility.py  997b7707ca03_add_argument_keys_to_target_elements.py  a6ed89ae3130_add_code_info_to_question_templates.py  a8d9cc8336b7_add_one_time_tokens_table_for_email_.py  ac775b2924f1_remove_question_many_to_many_tables.py  c0cc1cd462ef_copy_on_link_questions.py  c31d5bcd841c_add_question_data_tables.py  c57de1967ebf_create_initial_database_schema.py  ca836cc22081_add_question_bank.py  d5d4db4ad4ee_add_jobs_table.py  f1a5c82f5951_rename_username_to_name_and_remove_.py  fef2e085b62e_add_input_data_config.py
docs/: database.md
edcraft_backend/: database.py  dependencies.py  exceptions.py  forms_config.json  main.py
edcraft_backend/config/: __init__.py  environments.py  settings.py
edcraft_backend/executors/: __init__.py  nomad.py
edcraft_backend/models/: __init__.py  assessment.py  assessment_question.py  assessment_template.py  assessment_template_question_template.py  base.py  enums.py  folder.py  job.py  oauth_account.py  one_time_token.py  question.py  question_bank.py  question_bank_question.py  question_data.py  question_template.py  question_template_bank.py  question_template_bank_question_template.py  refresh_token.py  resource_collaborator.py  target_element.py  user.py
edcraft_backend/oauth/: config.py  providers.py  registry.py
edcraft_backend/repositories/: __init__.py  assessment_question_repository.py  assessment_repository.py  assessment_template_question_template_repository.py  assessment_template_repository.py  association_repository.py  base.py  collaborative_resource_repository.py  entity_repository.py  folder_repository.py  job_repository.py  oauth_account_repository.py  one_time_token_repository.py  question_bank_question_repository.py  question_bank_repository.py  question_repository.py  question_template_bank_question_template_repository.py  question_template_bank_repository.py  question_template_repository.py  refresh_token_repository.py  resource_collaborator_repository.py  target_element_repository.py  user_repository.py
tests/: conftest.py  factories.py  test_config.py
worker/: __init__.py  entrypoint.py  handlers.py
(+84 files in other folders)
